--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,8 +7,7 @@ jobs:
       - image: circleci/node:carbon
     steps:
       - checkout
-      - run: 
-        - npm install
-        - npm run build
-        - npm run deploy
+      - run: npm install
+      - run: npm run build
+      - run: npm run deploy
         
