--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,6 +6,9 @@ jobs:
     docker:
       - image: circleci/node:carbon
     steps:
+      - add_ssh_keys:
+        fingerprints:
+          - "91:b5:0e:42:13:dc:ec:c2:65:43:0f:e4:44:57:e7:22"
       - checkout
       - run: npm install
       - run: npm run build
