--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "prebuild": "mkdirp dist",
     "build": "showdown makehtml -i README.md -o dist/index.html",
-    "deploy": "gh-pages -d dist"
+    "deploy": "node scripts/deploy.js"
   },
   "repository": {
     "type": "git",
