External stylesheet, watcher, and clean the build dir

--- a/package.json
+++ b/package.json
@@ -3,9 +3,20 @@
   "version": "0.1.0",
   "description": "Resume of Christopher Dierkens",
   "scripts": {
-    "prebuild": "mkdirp build",
-    "build": "showdown makehtml -i README.md -o build/index.html",
+    "prebuild": "rimraf build && mkdirp build",
+    "build": "cp -r static/* build && showdown makehtml -i README.md -o build/index.html",
+    "watch": "npm-watch",
+    "start": "http-server build",
     "deploy": "node scripts/deploy.js"
+  },
+  "watch": {
+    "build": {
+      "patterns": [
+          "README.md",
+          "static"
+        ],
+      "extensions": "css"
+    }
   },
   "repository": {
     "type": "git",
@@ -19,6 +30,11 @@
   "devDependencies": {
     "gh-pages": "^1.2.0",
     "mkdirp": "^0.5.1",
+    "npm-watch": "^0.3.0",
+    "rimraf": "^2.6.2",
     "showdown": "^1.8.6"
+  },
+  "dependencies": {
+    "http-server": "^0.11.1"
   }
 }
